[gd_scene load_steps=27 format=2]

[ext_resource path="res://src/MainMenu/MainSettings.gd" type="Script" id=1]
[ext_resource path="res://src/MainMenu/inputbutton.gd" type="Script" id=2]
[ext_resource path="res://src/MainMenu/SteeringSettings.gd" type="Script" id=3]
[ext_resource path="res://assets/language-icons/en_selected.png" type="Texture" id=4]
[ext_resource path="res://assets/language-icons/en.png" type="Texture" id=5]
[ext_resource path="res://assets/language-icons/pl.png" type="Texture" id=6]
[ext_resource path="res://assets/Steering/8directions_icon.png" type="Texture" id=7]
[ext_resource path="res://assets/language-icons/pl_selected.png" type="Texture" id=8]
[ext_resource path="res://src/Buttons/TextureButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/slider/grabber_small.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/tres/shojumaru_48.tres" type="DynamicFont" id=11]
[ext_resource path="res://src/MainMenu/InputButton.gd" type="Script" id=12]
[ext_resource path="res://src/MainMenu/Inputbutton.gd" type="Script" id=13]
[ext_resource path="res://assets/Steering/gamepad_icon.png" type="Texture" id=14]
[ext_resource path="res://assets/Steering/rotation_icon.png" type="Texture" id=15]
[ext_resource path="res://assets/Steering/4directions_icon.png" type="Texture" id=16]
[ext_resource path="res://assets/Steering/virtualpad_icon.png" type="Texture" id=17]
[ext_resource path="res://src/GUISteering/SteerableContainer.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/MainMenu/SettingsScreen.gd" type="Script" id=19]
[ext_resource path="res://src/GUISteering/FocusableLanguageContainer.gd" type="Script" id=20]
[ext_resource path="res://src/GUISteering/FocusableSlider.gd" type="Script" id=21]
[ext_resource path="res://src/GUISteering/SteerableMenuButton.gd" type="Script" id=22]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.121569, 0.0666667, 0.0352941, 1 )
grow_begin = -6.0
grow_end = -6.0
thickness = 4

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.576471, 0.431373, 0.262745, 1 )
grow_begin = -6.0
grow_end = 0.0
thickness = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.980392, 0.933333, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.196078, 0.180392, 0.180392, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="Theme" id=4]
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 3 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null

[node name="SettingsScreen" type="MarginContainer"]
margin_left = 284.0
margin_top = 134.0
margin_right = 1044.0
margin_bottom = 632.0
custom_constants/margin_right = 60
custom_constants/margin_top = 20
custom_constants/margin_left = 60
custom_constants/margin_bottom = 20
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainSettings" type="VBoxContainer" parent="."]
visible = false
margin_left = 60.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 484.0
focus_neighbour_bottom = NodePath("MasterVolume")
focus_mode = 1
custom_constants/separation = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MainSettings"]
margin_right = 640.0
margin_bottom = 85.0
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="MainSettings/MarginContainer"]
margin_right = 640.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SETTINGS_TITLE"
align = 1

[node name="MasterVolume" parent="MainSettings" instance=ExtResource( 18 )]
margin_top = 105.0
margin_right = 640.0
margin_bottom = 148.0
focus_neighbour_top = NodePath("../BackBtnContainer")
focus_neighbour_bottom = NodePath("../SoundEffects")

[node name="Label" type="Label" parent="MainSettings/MasterVolume"]
margin_top = 5.0
margin_right = 170.0
margin_bottom = 38.0
text = "MUSIC_KEY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeSlider" type="HSlider" parent="MainSettings/MasterVolume"]
margin_left = 340.0
margin_right = 640.0
margin_bottom = 43.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 10
size_flags_vertical = 4
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 10 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 1.0
step = 0.0
value = 1.0
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffects" parent="MainSettings" instance=ExtResource( 18 )]
margin_top = 168.0
margin_right = 640.0
margin_bottom = 211.0
focus_neighbour_top = NodePath("../MasterVolume")
focus_neighbour_bottom = NodePath("../Language")

[node name="Label" type="Label" parent="MainSettings/SoundEffects"]
margin_top = 5.0
margin_right = 312.0
margin_bottom = 38.0
text = "AUDIO_EFFECTS_KEY"

[node name="SoundEffectsSlider" type="HSlider" parent="MainSettings/SoundEffects"]
margin_left = 340.0
margin_right = 640.0
margin_bottom = 43.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 10
size_flags_vertical = 4
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 10 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 1.0
step = 0.0
value = 1.0
script = ExtResource( 21 )

[node name="Language" parent="MainSettings" instance=ExtResource( 18 )]
margin_top = 231.0
margin_right = 640.0
margin_bottom = 359.0
rect_min_size = Vector2( 0, 128 )
focus_neighbour_top = NodePath("../SoundEffects")
focus_neighbour_bottom = NodePath("../SteeringBtnContainer")

[node name="Label" type="Label" parent="MainSettings/Language"]
margin_top = 47.0
margin_right = 318.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "LANGUAGE_KEY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="MarginContainer" parent="MainSettings/Language"]
margin_left = 322.0
margin_right = 640.0
margin_bottom = 128.0
size_flags_horizontal = 3
script = ExtResource( 20 )

[node name="Polish" type="TextureButton" parent="MainSettings/Language/Container"]
margin_left = 190.0
margin_right = 318.0
margin_bottom = 128.0
size_flags_horizontal = 8
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="English" type="TextureButton" parent="MainSettings/Language/Container"]
margin_right = 318.0
margin_bottom = 128.0
size_flags_horizontal = 9
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )

[node name="SteeringBtnContainer" parent="MainSettings" instance=ExtResource( 18 )]
margin_top = 379.0
margin_right = 640.0
margin_bottom = 412.0
focus_neighbour_top = NodePath("../Language")
focus_neighbour_bottom = NodePath("../BackBtnContainer")

[node name="SteeringBtn" parent="MainSettings/SteeringBtnContainer" instance=ExtResource( 9 )]
margin_right = 356.0
margin_bottom = 33.0
rect_min_size = Vector2( 356, 33 )
texture_normal = null
texture_pressed = null
texture_hover = null
upscale_on_hover = true
downscale_on_press = true
should_scale = false

[node name="Label" type="Label" parent="MainSettings/SteeringBtnContainer/SteeringBtn"]
margin_right = 40.0
margin_bottom = 33.0
text = "CHANGE_STEERING_KEY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtnContainer" parent="MainSettings" instance=ExtResource( 18 )]
margin_top = 432.0
margin_right = 640.0
margin_bottom = 464.0
focus_neighbour_top = NodePath("../SteeringBtnContainer")
focus_neighbour_bottom = NodePath("../MasterVolume")

[node name="BackBtn" parent="MainSettings/BackBtnContainer" instance=ExtResource( 9 )]
margin_right = 160.0
margin_bottom = 32.0
rect_min_size = Vector2( 160, 32 )
size_flags_horizontal = 0
size_flags_vertical = 10
texture_normal = null
texture_pressed = null
texture_hover = null
upscale_on_hover = true
downscale_on_press = true
should_scale = false

[node name="Label" type="Label" parent="MainSettings/BackBtnContainer/BackBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "BACK_KEY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SteeringSettings" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 478.0
focus_neighbour_bottom = NodePath("MenuButtonContainer")
focus_mode = 1
script = ExtResource( 3 )

[node name="Label" type="Label" parent="SteeringSettings"]
margin_right = 640.0
margin_bottom = 33.0
text = "STEERING_SETTINGS_KEY"
align = 1

[node name="MenuButtonContainer" parent="SteeringSettings" instance=ExtResource( 18 )]
margin_top = 37.0
margin_right = 640.0
margin_bottom = 76.0
focus_neighbour_top = NodePath("../HBoxContainer2/BackBtnContainer")
size_flags_vertical = 1

[node name="Label" type="Label" parent="SteeringSettings/MenuButtonContainer"]
margin_top = 3.0
margin_right = 308.0
margin_bottom = 36.0
text = "STEERING_TYPE_KEY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="SteeringSettings/MenuButtonContainer"]
margin_left = 312.0
margin_right = 403.0
margin_bottom = 39.0
focus_mode = 1
theme = SubResource( 4 )
enabled_focus_mode = 1
text = "None"
items = [ "4 Directions", ExtResource( 16 ), 0, false, false, 0, 0, null, "", false, "8 Directions", ExtResource( 7 ), 0, false, false, 1, 0, null, "", false, "Virtual Pad", ExtResource( 17 ), 0, false, false, 2, 0, null, "", false, "Pad", ExtResource( 14 ), 0, false, false, 3, 0, null, "", false, "Rotations", ExtResource( 15 ), 0, false, false, 4, 0, null, "", false ]
script = ExtResource( 22 )

[node name="Controls4Directions" type="VBoxContainer" parent="SteeringSettings"]
visible = false
margin_top = 80.0
margin_right = 640.0
margin_bottom = 291.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpHBox" parent="SteeringSettings/Controls4Directions" instance=ExtResource( 18 )]
margin_right = 640.0
margin_bottom = 39.0
focus_neighbour_top = NodePath("../../MenuButtonContainer")
focus_neighbour_bottom = NodePath("../LeftHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls4Directions/UpHBox"]
margin_top = 3.0
margin_right = 40.0
margin_bottom = 36.0
text = "Up"

[node name="Up" type="Button" parent="SteeringSettings/Controls4Directions/UpHBox"]
margin_left = 44.0
margin_right = 640.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 12 )
action_name = "4directions_up"

[node name="LeftHBox" parent="SteeringSettings/Controls4Directions" instance=ExtResource( 18 )]
margin_top = 43.0
margin_right = 640.0
margin_bottom = 82.0
focus_neighbour_top = NodePath("../UpHBox")
focus_neighbour_bottom = NodePath("../RightHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls4Directions/LeftHBox"]
margin_top = 3.0
margin_right = 67.0
margin_bottom = 36.0
text = "Left"

[node name="Left" type="Button" parent="SteeringSettings/Controls4Directions/LeftHBox"]
margin_left = 71.0
margin_right = 640.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 12 )
action_name = "4directions_left"

[node name="RightHBox" parent="SteeringSettings/Controls4Directions" instance=ExtResource( 18 )]
margin_top = 86.0
margin_right = 640.0
margin_bottom = 125.0
focus_neighbour_top = NodePath("../LeftHBox")
focus_neighbour_bottom = NodePath("../DownHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls4Directions/RightHBox"]
margin_top = 3.0
margin_right = 84.0
margin_bottom = 36.0
text = "Right"

[node name="Right" type="Button" parent="SteeringSettings/Controls4Directions/RightHBox"]
margin_left = 88.0
margin_right = 640.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 12 )
action_name = "4directions_right"

[node name="DownHBox" parent="SteeringSettings/Controls4Directions" instance=ExtResource( 18 )]
margin_top = 129.0
margin_right = 640.0
margin_bottom = 168.0
focus_neighbour_top = NodePath("../RightHBox")
focus_neighbour_bottom = NodePath("../ShotHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls4Directions/DownHBox"]
margin_top = 3.0
margin_right = 84.0
margin_bottom = 36.0
text = "Down"

[node name="Down" type="Button" parent="SteeringSettings/Controls4Directions/DownHBox"]
margin_left = 88.0
margin_right = 640.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 12 )
action_name = "4directions_down"

[node name="ShotHBox" parent="SteeringSettings/Controls4Directions" instance=ExtResource( 18 )]
margin_top = 172.0
margin_right = 640.0
margin_bottom = 211.0
focus_neighbour_top = NodePath("../DownHBox")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/BackBtnContainer")

[node name="Label" type="Label" parent="SteeringSettings/Controls4Directions/ShotHBox"]
margin_top = 3.0
margin_right = 76.0
margin_bottom = 36.0
text = "Shot"

[node name="Shot" type="Button" parent="SteeringSettings/Controls4Directions/ShotHBox"]
margin_left = 80.0
margin_right = 640.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 12 )
action_name = "shot_keyboard"

[node name="Controls8Directions" type="ScrollContainer" parent="SteeringSettings"]
visible = false
margin_top = 80.0
margin_right = 640.0
margin_bottom = 396.0
size_flags_vertical = 3
size_flags_stretch_ratio = 5.5
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="SteeringSettings/Controls8Directions"]
margin_right = 640.0
margin_bottom = 383.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpHBox" parent="SteeringSettings/Controls8Directions/VBoxContainer" instance=ExtResource( 18 )]
margin_right = 628.0
margin_bottom = 39.0
focus_neighbour_top = NodePath("../../../MenuButtonContainer")
focus_neighbour_bottom = NodePath("../UpLeftHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls8Directions/VBoxContainer/UpHBox"]
margin_top = 3.0
margin_right = 40.0
margin_bottom = 36.0
text = "Up"

[node name="Up" type="Button" parent="SteeringSettings/Controls8Directions/VBoxContainer/UpHBox"]
margin_left = 44.0
margin_right = 628.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 13 )
action_name = "8directions_up"

[node name="UpLeftHBox" parent="SteeringSettings/Controls8Directions/VBoxContainer" instance=ExtResource( 18 )]
margin_top = 43.0
margin_right = 628.0
margin_bottom = 82.0
focus_neighbour_top = NodePath("../UpHBox")
focus_neighbour_bottom = NodePath("../UpRightHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls8Directions/VBoxContainer/UpLeftHBox"]
margin_top = 3.0
margin_right = 117.0
margin_bottom = 36.0
text = "Up Left"

[node name="UpLeft" type="Button" parent="SteeringSettings/Controls8Directions/VBoxContainer/UpLeftHBox"]
margin_left = 121.0
margin_right = 628.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 13 )
action_name = "8directions_up_left"

[node name="UpRightHBox" parent="SteeringSettings/Controls8Directions/VBoxContainer" instance=ExtResource( 18 )]
margin_top = 86.0
margin_right = 628.0
margin_bottom = 125.0
focus_neighbour_top = NodePath("../UpLeftHBox")
focus_neighbour_bottom = NodePath("../DownHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls8Directions/VBoxContainer/UpRightHBox"]
margin_top = 3.0
margin_right = 134.0
margin_bottom = 36.0
text = "Up Right"

[node name="UpRight" type="Button" parent="SteeringSettings/Controls8Directions/VBoxContainer/UpRightHBox"]
margin_left = 138.0
margin_right = 628.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 13 )
action_name = "8directions_up_roght"

[node name="DownHBox" parent="SteeringSettings/Controls8Directions/VBoxContainer" instance=ExtResource( 18 )]
margin_top = 129.0
margin_right = 628.0
margin_bottom = 168.0
focus_neighbour_top = NodePath("../UpRightHBox")
focus_neighbour_bottom = NodePath("../DownLeftHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls8Directions/VBoxContainer/DownHBox"]
margin_top = 3.0
margin_right = 84.0
margin_bottom = 36.0
text = "Down"

[node name="Down" type="Button" parent="SteeringSettings/Controls8Directions/VBoxContainer/DownHBox"]
margin_left = 88.0
margin_right = 628.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 13 )
action_name = "8directions_down"

[node name="DownLeftHBox" parent="SteeringSettings/Controls8Directions/VBoxContainer" instance=ExtResource( 18 )]
margin_top = 172.0
margin_right = 628.0
margin_bottom = 211.0
focus_neighbour_top = NodePath("../DownHBox")
focus_neighbour_bottom = NodePath("../DownRightHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls8Directions/VBoxContainer/DownLeftHBox"]
margin_top = 3.0
margin_right = 161.0
margin_bottom = 36.0
text = "Down Left"

[node name="DownLeft" type="Button" parent="SteeringSettings/Controls8Directions/VBoxContainer/DownLeftHBox"]
margin_left = 165.0
margin_right = 628.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 13 )
action_name = "8directions_down_left"

[node name="DownRightHBox" parent="SteeringSettings/Controls8Directions/VBoxContainer" instance=ExtResource( 18 )]
margin_top = 215.0
margin_right = 628.0
margin_bottom = 254.0
focus_neighbour_top = NodePath("../DownLeftHBox")
focus_neighbour_bottom = NodePath("../LeftHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls8Directions/VBoxContainer/DownRightHBox"]
margin_top = 3.0
margin_right = 178.0
margin_bottom = 36.0
text = "Down Right"

[node name="DownRight" type="Button" parent="SteeringSettings/Controls8Directions/VBoxContainer/DownRightHBox"]
margin_left = 182.0
margin_right = 628.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 13 )
action_name = "8directions_down_right"

[node name="LeftHBox" parent="SteeringSettings/Controls8Directions/VBoxContainer" instance=ExtResource( 18 )]
margin_top = 258.0
margin_right = 628.0
margin_bottom = 297.0
focus_neighbour_top = NodePath("../DownRightHBox")
focus_neighbour_bottom = NodePath("../RightHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls8Directions/VBoxContainer/LeftHBox"]
margin_top = 3.0
margin_right = 67.0
margin_bottom = 36.0
text = "Left"

[node name="Left" type="Button" parent="SteeringSettings/Controls8Directions/VBoxContainer/LeftHBox"]
margin_left = 71.0
margin_right = 628.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 13 )
action_name = "8directions_left"

[node name="RightHBox" parent="SteeringSettings/Controls8Directions/VBoxContainer" instance=ExtResource( 18 )]
margin_top = 301.0
margin_right = 628.0
margin_bottom = 340.0
focus_neighbour_top = NodePath("../LeftHBox")
focus_neighbour_bottom = NodePath("../ShotHBox")

[node name="Label" type="Label" parent="SteeringSettings/Controls8Directions/VBoxContainer/RightHBox"]
margin_top = 3.0
margin_right = 84.0
margin_bottom = 36.0
text = "Right"

[node name="Right" type="Button" parent="SteeringSettings/Controls8Directions/VBoxContainer/RightHBox"]
margin_left = 88.0
margin_right = 628.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 13 )
action_name = "8directions_right"

[node name="ShotHBox" parent="SteeringSettings/Controls8Directions/VBoxContainer" instance=ExtResource( 18 )]
margin_top = 344.0
margin_right = 628.0
margin_bottom = 383.0
focus_neighbour_top = NodePath("../RightHBox")
focus_neighbour_bottom = NodePath("../../../HBoxContainer2/BackBtnContainer")

[node name="Label" type="Label" parent="SteeringSettings/Controls8Directions/VBoxContainer/ShotHBox"]
margin_top = 3.0
margin_right = 76.0
margin_bottom = 36.0
text = "Shot"

[node name="Shot" type="Button" parent="SteeringSettings/Controls8Directions/VBoxContainer/ShotHBox"]
margin_left = 80.0
margin_right = 628.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 13 )
action_name = "shot_keyboard"

[node name="ControlsPad" type="VBoxContainer" parent="SteeringSettings"]
visible = false
margin_top = 80.0
margin_right = 640.0
margin_bottom = 119.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotHBox" parent="SteeringSettings/ControlsPad" instance=ExtResource( 18 )]
margin_right = 640.0
margin_bottom = 39.0
focus_neighbour_top = NodePath("../../MenuButtonContainer")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/BackBtnContainer")

[node name="Label" type="Label" parent="SteeringSettings/ControlsPad/ShotHBox"]
margin_top = 3.0
margin_right = 76.0
margin_bottom = 36.0
text = "Shot"

[node name="Shot" type="Button" parent="SteeringSettings/ControlsPad/ShotHBox"]
margin_left = 80.0
margin_right = 640.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 2 )
action_name = "shot_pad"

[node name="ControlsVirtualPad" type="VBoxContainer" parent="SteeringSettings"]
visible = false
margin_top = 80.0
margin_right = 640.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsRotations" type="VBoxContainer" parent="SteeringSettings"]
visible = false
margin_top = 80.0
margin_right = 640.0
margin_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpHBox" parent="SteeringSettings/ControlsRotations" instance=ExtResource( 18 )]
margin_right = 640.0
margin_bottom = 39.0
focus_neighbour_top = NodePath("../../MenuButtonContainer")
focus_neighbour_bottom = NodePath("../RightHBox")

[node name="Label" type="Label" parent="SteeringSettings/ControlsRotations/UpHBox"]
margin_top = 3.0
margin_right = 40.0
margin_bottom = 36.0
text = "Up"

[node name="Up" type="Button" parent="SteeringSettings/ControlsRotations/UpHBox"]
margin_left = 44.0
margin_right = 640.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 2 )
action_name = "rotation_up"

[node name="RightHBox" parent="SteeringSettings/ControlsRotations" instance=ExtResource( 18 )]
margin_top = 43.0
margin_right = 640.0
margin_bottom = 82.0
focus_neighbour_top = NodePath("../UpHBox")
focus_neighbour_bottom = NodePath("../LeftHBox")

[node name="Label" type="Label" parent="SteeringSettings/ControlsRotations/RightHBox"]
margin_top = 3.0
margin_right = 84.0
margin_bottom = 36.0
text = "Right"

[node name="Right" type="Button" parent="SteeringSettings/ControlsRotations/RightHBox"]
margin_left = 88.0
margin_right = 640.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
action_name = "rotation_right"

[node name="LeftHBox" parent="SteeringSettings/ControlsRotations" instance=ExtResource( 18 )]
margin_top = 86.0
margin_right = 640.0
margin_bottom = 125.0
focus_neighbour_top = NodePath("../RightHBox")
focus_neighbour_bottom = NodePath("../ShotHBox")

[node name="Label" type="Label" parent="SteeringSettings/ControlsRotations/LeftHBox"]
margin_top = 3.0
margin_right = 67.0
margin_bottom = 36.0
text = "Left"

[node name="Left" type="Button" parent="SteeringSettings/ControlsRotations/LeftHBox"]
margin_left = 71.0
margin_right = 640.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 2 )
action_name = "rotation_left"

[node name="ShotHBox" parent="SteeringSettings/ControlsRotations" instance=ExtResource( 18 )]
margin_top = 129.0
margin_right = 640.0
margin_bottom = 168.0
focus_neighbour_top = NodePath("../LeftHBox")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/BackBtnContainer")

[node name="Label" type="Label" parent="SteeringSettings/ControlsRotations/ShotHBox"]
margin_top = 3.0
margin_right = 76.0
margin_bottom = 36.0
text = "Shot"

[node name="Shot" type="Button" parent="SteeringSettings/ControlsRotations/ShotHBox"]
margin_left = 80.0
margin_right = 640.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
flat = true
align = 0
script = ExtResource( 2 )
action_name = "shot_keyboard"

[node name="HBoxContainer2" type="HBoxContainer" parent="SteeringSettings"]
margin_top = 425.0
margin_right = 640.0
margin_bottom = 458.0
size_flags_vertical = 10

[node name="BackBtnContainer" parent="SteeringSettings/HBoxContainer2" instance=ExtResource( 18 )]
margin_right = 318.0
margin_bottom = 33.0
focus_neighbour_left = NodePath("../ResetBtnContainer")
focus_neighbour_right = NodePath("../ResetBtnContainer")
focus_neighbour_bottom = NodePath("../../MenuButtonContainer")

[node name="BackBtn" parent="SteeringSettings/HBoxContainer2/BackBtnContainer" instance=ExtResource( 9 )]
margin_top = 1.0
margin_right = 160.0
margin_bottom = 33.0
rect_min_size = Vector2( 160, 32 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 10
texture_normal = null
texture_pressed = null
texture_hover = null
upscale_on_hover = true
downscale_on_press = true

[node name="Label" type="Label" parent="SteeringSettings/HBoxContainer2/BackBtnContainer/BackBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
text = " <-   Wróć"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetBtnContainer" parent="SteeringSettings/HBoxContainer2" instance=ExtResource( 18 )]
margin_left = 322.0
margin_right = 640.0
margin_bottom = 33.0
focus_neighbour_left = NodePath("../BackBtnContainer")
focus_neighbour_right = NodePath("../BackBtnContainer")
focus_neighbour_bottom = NodePath("../../MenuButtonContainer")

[node name="ResetBtn" parent="SteeringSettings/HBoxContainer2/ResetBtnContainer" instance=ExtResource( 9 )]
margin_left = 56.0
margin_right = 318.0
margin_bottom = 33.0
rect_min_size = Vector2( 262, 33 )
focus_mode = 0
size_flags_horizontal = 10
texture_normal = null
texture_pressed = null
texture_hover = null
upscale_on_hover = true
downscale_on_press = true

[node name="Label" type="Label" parent="SteeringSettings/HBoxContainer2/ResetBtnContainer/ResetBtn"]
margin_right = 40.0
margin_bottom = 33.0
text = "Restore default"
__meta__ = {
"_edit_use_anchors_": false
}
